# Copyright (c) 2019 Prashant K. Jha
# Copyright (c) 2019 Patrick Diehl
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

AUX_SOURCE_DIRECTORY(./ SOURCES)

add_library(Util ${SOURCES})
#target_link_libraries(Util PUBLIC Data ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
